# python-debouncer

./: CHANGELOG.md  README.md  demo.py  pyproject.toml
.github/workflows/: integration_delivery.yml
debouncer/: __init__.py  debounce.py
